# dxwatch

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.yaml  config.yaml  dx_xlsx2json.py  dxpedition_cli.py  export_dxpedition.py  import_dxpedition.py  make_movie.py  pskreporter_server.py  pyproject.toml  server.py  snapshot.py  start.sh  test.py
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  postCreateCommand.sh
pages/: app.html  dx.html  dxpedition.html  jq3ikn.html  local.html  my_dx.html
static/: activity-dialog.js  app-router.js  app.css  app.js  cookies.js  map-core.js  map-grid.js  map-ui.js  mqtt-client.js  mqtt-keepalive.js  mqtt-worker.js  page-init.js  ws-client.js  ws-worker.js
