[project]
name = "python-template"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.3",
    "staticmap>=0.5.7",
    "uvicorn[standard]>=0.41.0",
]
[dependency-groups]
dev = [
    "git-filter-repo>=2.47.0",
]
